@startuml DatabaseModel
skin rose
hide empty members

entity User {
  *id: int
  *name: string
  *lastname: string
  *email: string
  *password: string
  *isActive: boolean
  *created_at: datetime
  *updated_at: datetime
}

entity Dish {
    *id: int
    *name: string
    *description: string
    *image: string
    *price: float
    *category: enum
    *ingredients: string
    *aviable: boolean
    *isActive: boolean
    *created_at: datetime
    *updated_at: datetime
}

entity Order {
  *id: int
  *user_id: int
  *dish_id: int
  *quantity: int
  *total_price: float
  *status: enum
  *created_at: datetime
  *updated_at: datetime
}

entity Dish_Order {
  *id: int
  *dish_id: int
  *order_id: int
  *quantity: int
  *total_price: float
  *created_at: datetime
  *updated_at: datetime
}

User --> Order : "1..*" "Places"
Order --> Dish_Order : "1..*" "Contains"
Dish --> Dish_Order : "1..*" "Includes"

@enduml